# pybounds

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yaml  tests.yaml
code/: observability.py  simulator.py  simulator_fly_wind.py  simulator_lorenz.py  simulator_mono_camera.py  simulators.py  util.py
docs/: api.rst  conf.py  index.rst
examples/: fly_wind_example.ipynb  fly_wind_example_jax.ipynb  mono_camera_example.ipynb  mono_camera_example_jax.ipynb
graphics/: pybounds_overview.pptx
notebooks/: fly_wind_example.ipynb  lorenz_example.ipynb  mono_camera_basic_example.ipynb  mono_camera_example.ipynb
pybounds/: __init__.py  jacobian.py  jax_simulator.py  observability.py  observability_transform.py  simulator.py  util.py
tests/: conftest.py  test_diagnostic_pdf.py  test_empirical_observability.py  test_fisher_observability.py  test_jacobian.py  test_jax_observability.py  test_observability_image.py  test_simulator.py  test_sliding_fisher.py  test_sliding_observability.py  test_transform_states.py  test_util.py
