[build-system]
requires = ["setuptools>=40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybounds"
version = "0.1.0"
authors = [
    { name = "Ben Cellini", email = "bcellini00@gmail.com" },
    { name = "Burak Boyacioglu" },
    { name = "Floris van Breugel" },
]
description = "Bounding Observability for Uncertain Nonlinear Dynamics Systems (BOUNDS)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "do_mpc>=4.6.5",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.4.3",
    "scipy>=1.7.0",
    "sympy>=1.9",
    "casadi",
]

[project.urls]
homepage = "https://pypi.org/project/pybounds/"
source = "https://github.com/vanbreugel-lab/pybounds"
download = "https://pypi.org/project/pybounds/#files"
tracker = "https://github.com/vanbreugel-lab/pybounds/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
jax = ["jax[cpu]>=0.4.0"]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools]
packages = ["pybounds"]
